# mono

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: lab-apply.yaml  lab-connect-test.yaml  lab-plan.yaml  luigi-dns.yaml  luigi-plan.yaml  luigi.yaml  mail-server-preview.yml
app/mail-server/.resources/: .envrc  Pulumi.prod.yaml  Pulumi.yaml
app/mail-server/resources/: Pulumi.dev.yaml  Pulumi.prod.yaml  __main__.py  pyproject.toml
app/mail-server/resources/data/: config.example.json  docker-compose.yml  user-data.sh
app/orchestration/instance-patrol/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
homelab/: README.md  config.yaml
homelab/.pulumi-work/: Pulumi.geno.yaml  Pulumi.yaml
homelab/luigi/dns/: README.md  blocklists.txt
homelab/luigi/terraform/: .env.tpl  .terraform.lock.hcl  aws.tf  bootstrap.tf  import.tf  main.tf  one_password.tf  terraform.tf
homelab/service/boo/: service.yaml
homelab/service/geno/: AGENTS.md  answer.toml.tpl  names  service.yaml
infra/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
pulumi-backend/: Pulumi.dev.yaml  Pulumi.yaml  README.md
src/python/lab_cli/: README.md  __main__.py  cli.py  credentials.py  deployer.py  models.py  service_loader.py  template_resolver.py
terraform/: README.md
terraform/bootstrap/: .terraform.lock.hcl  artifacts.tf  bucket.tf  github_oidc.tf  imports.tf  secrets.auto.tfvars.tpl  terraform.tf  variables.tf
terraform/lab/: .env.tpl  .terraform.lock.hcl  terraform.tf  test_user.tf  variables.tf
(+8 files in other folders)
